--- a/TRIUMF-frontend/index.html
+++ b/TRIUMF-frontend/index.html
@@ -105,8 +105,6 @@
           </tbody>
         </table>
         <div class="smallContainer" id="twitterWidget">
-          <a class="twitter-timeline" href="https://twitter.com/crjcharles?ref_src=twsrc%5Etfw"
-            style="height:100%">Tweets by crjcharles</a>
           <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
         </div>
       </div>
@@ -123,22 +121,24 @@
     <!-- END status information -->
   </main>
   <footer>
-    <p class="footerCredits" >Application Developed By Team TRIUMF 442. BCIT Computing, Fall 2022 | Members: 
-      <a class="footerNameLink" href="https://github.com/kitoshi">Robert Charlton</a>, 
-      <a class="footerNameLink" href="https://github.com/Sadicecream">Christopher Earis</a>, 
+    <p class="footerCredits">Application Developed By Team TRIUMF 442. BCIT Computing, Fall 2022 | Members:
+      <a class="footerNameLink" href="https://github.com/kitoshi">Robert Charlton</a>,
+      <a class="footerNameLink" href="https://github.com/Sadicecream">Christopher Earis</a>,
       <a class="footerNameLink" href="https://github.com/Filet26
-      ">Desmond Ho</a>, 
-      <a class="footerNameLink" href="https://github.com/MayFlower116">Elijah Krieger</a>, 
-      <a class="footerNameLink" href="https://github.com/Richard2000wang">Richard Wang</a>, 
-      <a class="footerNameLink" href="https://github.com/kwong526">Clinton Wong</a>, 
-      <a class="footerNameLink" href="https://github.com/Y00N-Park">SJ Park</a></p>
+      ">Desmond Ho</a>,
+      <a class="footerNameLink" href="https://github.com/MayFlower116">Elijah Krieger</a>,
+      <a class="footerNameLink" href="https://github.com/Richard2000wang">Richard Wang</a>,
+      <a class="footerNameLink" href="https://github.com/kwong526">Clinton Wong</a>,
+      <a class="footerNameLink" href="https://github.com/Y00N-Park">SJ Park</a>
+    </p>
 
-    <a target="_blank" href="https://github.com/Filet26/TRIUMF_442_HLA_2"><img class="githubLogo" src="./public/githublogo.png" alt="githublogo" ></a>
-      <!-- Sneaky Data -->
-      <div id="graph_data"></div>
-      <!-- END Sneaky Data -->
+    <a target="_blank" href="https://github.com/Filet26/TRIUMF_442_HLA_2"><img class="githubLogo"
+        src="./public/githublogo.png" alt="githublogo"></a>
+    <!-- Sneaky Data -->
+    <div id="graph_data"></div>
+    <!-- END Sneaky Data -->
 
-    </footer>
+  </footer>
   <script defer src="./chart.js"></script>
   <script defer src="./slideshow.js"></script>
 
