--- a/TRIUMF-frontend/index.html
+++ b/TRIUMF-frontend/index.html
@@ -16,7 +16,6 @@
 
 <body>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-
   <script defer src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
   <script defer src="./data.js"></script>
 
@@ -111,7 +110,7 @@
       </div>
       <!-- END DATA information -->
       <div class="chartContainer">
-        <canvas id="myChart" height="95%" width="auto"></canvas>
+        <canvas id="myChart" height="auto" width="500vw"></canvas>
       </div>
     </section>
     </section>
